rsfg/tests/scripts/error/add-str.sfg
fn main()
	// STRING APPEND IS NOT +
	log("hi" + "there")

